force-app/main/default/objects/Treasures__c/Treasures__c.object-meta.xml
<CustomObject>
    <label>Treasure</label>
    <nameField>
        <label>Name</label>
        <type>Text</type>
    </nameField>
    <pluralLabel>Treasures</pluralLabel>
    <sharingModel>ReadWrite</sharingModel>
</CustomObject>