force-app/main/default/objects/Treasures__c/fields/Castle__c.field-meta.xml
<CustomField>
    <fullName>Castle__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <label>Castle</label>
    <referenceTo>Castle__c</referenceTo>
    <relationshipLabel>Treasures</relationshipLabel>
    <relationshipName>Treasures</relationshipName>
    <type>Lookup</type>
</CustomField>