force-app/main/default/objects/Treasures__c/fields/Location__c.field-meta.xml
<CustomField>
    <fullName>Location__c</fullName>
    <defaultValue>&quot;Unknown&quot;</defaultValue>
    <label>Location</label>
    <type>TextArea</type>
</CustomField>