force-app/main/default/objects/Treasures__c/fields/Storage_Location__c.field-meta.xml
<CustomField>
    <fullName>Storage_Location__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <label>Storage Location</label>
    <referenceTo>Property__c</referenceTo>
    <relationshipLabel>Treasures</relationshipLabel>
    <relationshipName>Treasures</relationshipName>
    <type>Lookup</type>
</CustomField>