force-app/main/default/objects/Treasures__c/fields/Type__c.field-meta.xml
<CustomField>
    <fullName>Type__c</fullName>
    <label>Type</label>
    <type>Picklist</type>
    <valueSet>
        <valueSetDefinition>
            <value>
                <fullName>Armor</fullName>
            </value>
            <value>
                <fullName>Weapon</fullName>
            </value>
            <value>
                <fullName>Location</fullName>
            </value>
            <value>
                <fullName>Lamp</fullName>
            </value>
            <value>
                <fullName>Jewelry</fullName>
            </value>
            <value>
                <fullName>Container</fullName>
            </value>
            <value>
                <fullName>Clothing</fullName>
            </value>
            <value>
                <fullName>Statue</fullName>
            </value>
            <value>
                <fullName>Stone</fullName>
            </value>
            <value>
                <fullName>Vehicle</fullName>
            </value>
            <value>
                <fullName>Liquid</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>